Adicionando ultima correção para funcionar o projeto